# unword

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml  copilot-setup-steps.yml  release.yml  tests.yml
src/: clx.rs  fib.rs  fields.rs  lib.rs  main.rs  markdown.rs  ole.rs  papx.rs  styles.rs  text.rs
tests/: integration.rs  test_python.py
tests/fixtures/: 1000.doc
