[package]
name = "unword"
version = "0.1.0"
edition = "2021"

[lib]
name = "unword"
crate-type = ["cdylib", "rlib"]

[dependencies]
cfb = "0.14"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
encoding_rs = "0.8"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
